--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ html{
     overflow-y: hidden;
 }
 
+*::before, *::after{
+    box-sizing: inherit;
+}
+
 a {
     text-decoration: none;
     color: black
@@ -31,7 +35,7 @@ body{
 }
 
 .nav-elements * {
-    margin: 0 7px;;
+    margin: 0 7px;
 }
 
 .top-right{
@@ -43,6 +47,10 @@ body{
 .bottom-right{
     display: flex;
     justify-content: flex-end;
+}
+
+.bottom-left{
+    justify-content: flex-start;
 }
 
 main{
@@ -70,16 +78,78 @@ main{
     border-radius: 999px;
 }
 
-#barra-de-busqueda input{
-    width: 550px;
-    margin: 0 auto;
-    margin-bottom: 15px;
+#barra-de-busqueda{
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    padding: 10px;
+    width: 60%;
+    border-radius: 30px;
+    border: 1px solid #E2E2E2;
 }
 
-#barra-de-busqueda{
-    width: 545px;
-    height: 19px;
-    border-radius: 100px;
-    border: 1px solid #e1e2e6;
-    margin-bottom: 15px;
+#barra-de-busqueda input{
+    padding: 10px;
+    flex-grow: 1;
+    margin: 0 10px;
+    border: none;
+    outline: none;
+}
+
+#barra-de-busqueda::after{
+    content:url(./recursos/micro-15p.png);
+}
+
+#barra-de-busqueda::before{
+    content: url(./recursos/lupa-15p.png);
+}
+
+#barra-de-busqueda:hover{
+    box-shadow: 0 1px 6px 0 #20212447;
+}
+
+button{
+    border: none;
+    background-color: #f2f2f2;
+    padding: 10px;
+    border-radius: 10px;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+button:hover{
+    box-shadow: 0 1px 6px 0 #20212447;
+}
+
+button:active{
+    border: 1px solid rgb(42, 120, 255);
+}
+
+.anuncio a{
+    color: rgb(50, 101, 255);
+}
+
+.anuncio a:hover{
+    text-decoration: underline;
+}
+
+.country{
+    border-bottom: 1px solid #d9dbdf;
+    display: block;
+    padding: 20px;
+    margin: 0;
+}
+
+footer{
+    background-color: #f1f1f1;
+}
+
+.nav-bottom-elements {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.nav-bottom-elements li:hover{
+    text-decoration: underline;
 }
